# CG_Algorithms

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  make.bat
lab1/: CMakeLists.txt  Hamurabi.cpp  README.md  save.txt
lab2/: CMakeLists.txt  DynamicArray.cpp  DynamicArray.h  DynamicArray_test.cc  README.md  main.cpp
lab3/: CMakeLists.txt  QuickSort.h  QuickSortTests.xlsx  QuickSort_test.cc  README.md
lab4/: CMakeLists.txt  CoalesceAllocator.cpp  CoalesceAllocator.h  FixedSizeAllocator.cpp  FixedSizeAllocator.h  MemoryManager.cpp  MemoryManager.h  MemoryManager_test.cc  README.md  main.cpp
